css/style.css
* {
    margin: 0;
    padding: 0;
    border:0;
    font-family: Arial, Helvetica, sans-serif;
    cursor:default;
}

html {
    scrollbar-face-color: #646464;
    scrollbar-base-color: #646464;
    scrollbar-3dlight-color: #646464;
    scrollbar-highlight-color: #646464;
    scrollbar-track-color: #000;
    scrollbar-arrow-color: #000;
    scrollbar-shadow-color: #646464;
    scrollbar-darkshadow-color: #646464;
}
  
::-webkit-scrollbar { width: 12px; height: 3px;}
::-webkit-scrollbar-track { background: black;}
::-webkit-scrollbar-track-piece { background: black;}
::-webkit-scrollbar-thumb { height: 10px; background: linear-gradient(360deg, #09aae0dd, #82509fdd, #eb3791dd, #d6098bdd, #f95a28dd, #ff9f00dd);; border-radius: 10px; border:2px solid black;}
::-webkit-scrollbar-corner { background-color: #646464;}
::-webkit-resizer { background-color: #666;}

body {
    height:fit-content;
    width:fit-content;
    overflow-x:hidden;
    background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
    position:relative;
    z-index:-2;
}

#background {
    filter:contrast(3);
    opacity:0.7;
    z-index:-1;
    width:100%;
    height:100%;
    position:absolute;
    background: linear-gradient(90deg, #09aae0dd, #82509fdd, #eb3791dd, #d6098bdd, #f95a28dd, #ff9f00dd);
}

header{
    width:  100%;
    height:25vh;
    background-color: black;
    display: flex;
    position:relative;
    margin-bottom:2%;
    z-index:10;
    img {
        height:100%;
        aspect-ratio: 1/1;
        filter:drop-shadow(2px 2px 20px white);
    }
    h1 {
        position:absolute;
        top:50%;
        left:50%;
        transform:translate(-50%,-50%);
        text-align: center;
        color:  white;
        font-size: 400%;
        filter:drop-shadow(0 0 20px white);
        text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
        -webkit-text-stroke: 1px black;
    }
}


main{
    width: 80%;
    height: auto;
    background-color: #3A3B3C;
    margin-left: 10%;
    margin-right: 10%;
    box-shadow: inset 0 0 60px 30px black;
    border-radius:50px;
    border:#353638 12px solid;
    padding-bottom:5%;
}

#content{
    /* filter:brightness(0.4); */
    display:flex;
    flex-wrap: wrap;
    div{
        width: 70%;
        background-color: #57585a;
        /*linear-gradient(90deg, #09aae0, #82509f, #eb3791, #d6098b, #f95a28, #ff9f00 );*/
        margin-left: calc(15% - 12px);
        margin-top: 5%;
        border-radius: 25px;
        transition:0.4s;
        transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.675);
        overflow:hidden;
        .container {
            width:50%;
            margin-bottom: 5%;
            margin-left: 5%;
            .wrapper {
                width:85%;
                aspect-ratio: 1/1;
                display:flex;
                img {
                    width:100%;
                    aspect-ratio: 1/1;
                    transition:0.5s;
                }
            }
        }
        h2 {
            font-size:300%;
            background: white;
            background-clip: text;
            -webkit-text-fill-color: transparent;
            filter:brightness(1);
            text-align:center;
            filter:drop-shadow(0 0 20px silver);
            -webkit-text-stroke: 1px black;
        }
        .divcontent {
            margin:0;
            width:100%;
            display:flex;
        }
        .artist-name-container {
            height:100%;
            border-radius:0;
            margin-left:0;
            text-align:center;
            display: flex;
            flex-wrap:wrap;
            row-gap: 0;
            div {
                height: calc(100% / 6);
                display:flex;
                border-radius:0;
            }
            button {
                cursor:pointer;
                height:100%;
                width:25%;
                border-radius:5px;
                border:3px solid black;
                background: black;
                color:white;
            }
            p {
                width:100%;
                transform:scale(0.8);
                transition:.5s;
                font-size:150%;
                height: calc(100%/6);
                color:silver;
                font-weight:bold;
                text-shadow: 0 0 3px silver;
                filter:contrast(2);
                display:box;
            }
        }
    }
    .contest {
        border: 10px dotted #9b9b9b;
        padding-bottom:3%;
        padding-top:3%;
        position:relative;
        z-index:0;
        div {
            z-index:1;
            display:relative;
            .timertext {
                height:fit-content;
                width:fit-content;
                position:absolute;
                top:50%;
                left:70%;
                transform:translate(-50%,-50%);
                color: white;
                text-shadow: 0 0 100px black;
                filter:drop-shadow(0 0 20px white);
                -webkit-text-stroke: 4px black;
                text-align:center;
                font-size:200px;
                filter:none;
                z-index:1;
            }
        }
    }
}
 
footer{
    width: 100%;
    height: 25%;
    background: black;
    margin-top:2%;  
    div{
        justify-content: center;
        text-align:center;
        align-items:center;
        padding-top: 1%;
        line-height: 150%;
        color: white;  
    }
}

.contestvideocontainer {
    background-color:#57585a;
    border: 10px dotted #9b9b9b;
    border-radius:10%;
    top:10vh;
    left:10vw;
    width:80vw;
    height:80vh;
    z-index:15;
    position:fixed;
    display:flex;
    flex-direction:column;
    .contestvideo {
        margin-top:5%;
        width:90%;
        height:70%;
        margin-left:5%;
    }
    .contestvideoclose {
        color:white;
        font-size:80px;
        width:90%;
        margin-left:5%;
        height:15%;
        background: linear-gradient(90deg, #09aae0dd, #82509fdd, #eb3791dd, #d6098bdd, #f95a28dd, #ff9f00dd);
        border-radius: 0 0 50px 50px;
        cursor:pointer;
    }
}

#acceptcookiesdiv {
    opacity: 0.5;
    position: fixed;
    bottom:0;
    left:0;
    height:25%;
    width:100%;
    background:gray;
    align-items:center;
    justify-content: center;
    display:flex;
    flex-direction: column;
    h3 {
        font-size:40px;
    }
    div {
        width:fit-content;
        display:flex;
        flex-direction: row;
        button {
            background-color:red;
            color:white;
            width:50%;
            aspect-ratio: 1/1;
        }
        button:first-child {
            background-color:green;
        }
    }
}

.hideacceptcookies {
    transform:scale(0);
}

@media only screen and (max-width: 600px) {
    header {
        h1{
            font-size: 200%; 
        }
        img {
            height:80%;
        }
    }
    button {
        font-size:7px;
    }
    #content {
        div {
            .artist-name-container {
                p {
                    font-size:75%;
                }
            }
        }
        .contest {
            div {
                .timertext {
                    font-size:100px;
                }
            }
        }
    }
}

